WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279537
CRASH: JSC::construct() under AudioWorkletGlobalScope::createProcessor()
https://bugs.webkit.org/show_bug.cgi?id=279537
Summary
CRASH: JSC::construct() under AudioWorkletGlobalScope::createProcessor()
Jer Noble
Reported
2024-09-11 12:44:05 PDT
CRASH: JSC::construct() under AudioWorkletGlobalScope::createProcessor()
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-09-11 12:44:05 PDT
<
rdar://problem/133488018
>
Jer Noble
Comment 2
2024-09-11 12:53:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33486
EWS
Comment 3
2024-09-11 17:48:01 PDT
Committed
283510@main
(f81ff1af098d): <
https://commits.webkit.org/283510@main
> Reviewed commits have been landed. Closing PR #33486 and removing active labels.
EWS
Comment 4
2024-09-18 15:49:14 PDT
Committed
283286.72@safari-7620-branch
(b6111a129124): <
https://commits.webkit.org/283286.72@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1823 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug