Cherry-pick 283510@main (f81ff1af098d). https://bugs.webkit.org/show_bug.cgi?id=279537

CRASH: JSC::construct() under AudioWorkletGlobalScope::createProcessor()
    https://bugs.webkit.org/show_bug.cgi?id=279537
    rdar://133488018

    Reviewed by Ryan Reno.

    JSCallbackData's m_callback ivar is weakly held, so it must be null-checked at access time.

    * Source/WebCore/Modules/webaudio/AudioWorkletGlobalScope.cpp:
    (WebCore::AudioWorkletGlobalScope::createProcessor):

    Canonical link: https://commits.webkit.org/283510@main

Canonical link: https://commits.webkit.org/282416.143@webkitglib/2.46